# biona_core

./: Cargo.toml  README.md
src/: lib.rs
src/biona_macros/: Cargo.toml
src/biona_macros/src/: lib.rs
src/biona_macros/src/attribute_types/: bool_attribute.rs  expr_method_call.rs  integer_literal_attribute.rs  mod.rs  path_attribute.rs  string_literal_attribute.rs
src/biona_macros/src/impl_table_trait/: construct_blocks.rs  implementation.rs  mod.rs
src/models/: default_date.rs  field.rs  filter_sort.rs  metainfo.rs  mod.rs  table_page.rs  table_trait.rs  table_update_page.rs
src/paths/: generate_table_page_and_data.rs  generate_table_row_update.rs  mod.rs
