[package]
name = "biona_core"
version = "0.1.0"
authors = ["nikolaykolevk <nikolaykolevk@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
diesel = { version = "1.4.4", features = ["postgres", "chrono"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.57"
chrono = {version="0.4.19",features = ["serde"]}



[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["handlebars_templates", "tera_templates", "serve"]

[dependencies.biona_macros]
path = "src/biona_macros"
